tree-sitter-dex/test/corpus/oneEventLotsOfNewlines.txt
===========================
one event, lots of newlines
:skip
===========================




unknown <27>: <31>




---

(source_file
	(event
		(command
			(text)
			(argument)
			(text)
			(argument))))
